sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:11: error: not found: value j
    setValeur(i-j,v)
                ^