sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v = 0
  for (i<- 1 to getNombreValeurs()-1){
    v=getValeur(i)
    for (j<-1 to i){
    	if(v>getValeur(i-1)){
      	copie(i-j,i-j+1)
    	}
    }
    setValeur(i-j,v)
  }
}